; ModuleID = '/home/carl/AnghaBench/systemd/src/libsystemd/sd-daemon/extr_sd-daemon.c_unsetenv_all.c'
source_filename = "/home/carl/AnghaBench/systemd/src/libsystemd/sd-daemon/extr_sd-daemon.c_unsetenv_all.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [11 x i8] c"LISTEN_PID\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"LISTEN_FDS\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"LISTEN_FDNAMES\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @unsetenv_all to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unsetenv_all(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = icmp ne i32 %3, 0
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %10

6:                                                ; preds = %1
  %7 = call i32 @unsetenv(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @unsetenv(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %9 = call i32 @unsetenv(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  br label %10

10:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @unsetenv(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
